# great-review

./: CLAUDE.md  README.md  package-lock.json  package.json
.claude/: plan-builtins-worker.md  plan-eval-worker.md  plan-promise-finally.md  plan-task1.md  plan-task6.md
docs/plans/: 2026-02-06-great-review-design.md
src/: App.css  App.tsx  index.css  main.tsx  prompt-generator.test.ts  prompt-generator.ts  state.ts  tauri-api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  diff_parser.rs  lib.rs  main.rs  repo_info.rs
src/components/: BottomBar.css  BottomBar.tsx  DiffViewer.css  DiffViewer.tsx  FeedbackInput.css  FeedbackInput.tsx  FileTree.css  FileTree.tsx  HunkToolbar.css  HunkToolbar.tsx  TopBar.css  TopBar.tsx
