[package]
name = "great-review"
version = "0.1.0"
description = "A local desktop app for reviewing AI-generated code changes hunk-by-hunk"
authors = ["Paulo Matos"]
edition = "2021"

[[bin]]
name = "gr"
path = "src/main.rs"

[lib]
name = "great_review_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-cli = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
